<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InstaCheck</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_id">152995924909687</string>
    <string name="instStr">Snap A Check</string>
    <string name="iDesc">Bill Pic</string>
    <string name="splitText">Split</string>
    <string name="title_activity_tip">Tip Selection</string>
    <string name="title_activity_final_tab">instaCheck</string>
    <string name="amountOfTipAmountLabel">amount:</string>
    <string name="tipOfTipAmountLabel">(Tip&#160;</string>
    <string name="tipLabel">Tip</string>
    <string name="tipSplitLabel">Tip Split</string>
    <string name="taxSplitLabel">Tax Split</string>
    <string name="proportionalSplitLabel">Proportional Split</string>
    <string name="equalSplitLabel">Equal Split</string>
    <string name="nextLabel">Click here for Final-Tab</string>
    <string name="FinalTabTitle">Final Tab</string>
    <string name="PeopleSubTitle">People</string>
    <string name="AmountSubTitle">Amount</string>
</resources>