<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.moquapps.android.instacheck.TipActivity" >
    
    <!-- To center the Tip string on display, I need to center the Colon !! -->
    <TextView
        android:id="@+id/textViewTipLabel_Colon"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold" 
        android:text = ":"/>
    
    <TextView
        android:id="@+id/textViewTipLabel"
        android:layout_toLeftOf="@+id/textViewTipLabel_Colon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold" 
        android:text = "@string/tipLabel"/>
    
     <TextView
        android:id="@+id/textViewSeekBarProgressValue"
        android:layout_toRightOf="@+id/textViewTipLabel_Colon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"    />
       
    <SeekBar 
        android:id="@+id/seekBarTipPercentage"        
        android:layout_below="@+id/textViewTipLabel"
        android:layout_marginTop="14dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:background="#AAEAED"   />
     <!-- This is absolute scale labeling work right for Nexus4 emulator. But
       ** When run on Samsung-Tablet, the % Labels mismatch Tip % reading on slideBar; 
       ** To fix it, "each % Label" need "relative-positioning" from Left and from Center
       ** Will need to use weight & Gravity etc. to label the scale correctly. 
       ** "Weight" is good but NOT accurate to meet 'perfect' alignment w seekBar labels
      
     <TextView
        android:id="@+id/textViewSeekBarLabels"
        android:layout_below="@+id/seekBarTipPercentage"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textStyle="normal"
        android:text="\u0020 0%\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020 5% \u0020\u0020\u0020\u0020\u0020\u0020\u0020 10% \u0020\u0020\u0020\u0020\u0020\u0020\u0020 15% \u0020\u0020\u0020\u0020\u0020\u0020\u0020 20% \u0020\u0020\u0020\u0020\u0020\u0020 25% \u0020\u0020\u0020\u0020\u0020 30% . . ."
     />   
     -->  
     
<TextView
        android:id="@+id/TextView_0_label"
        android:layout_below="@+id/seekBarTipPercentage"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="6dp"
        android:text="0%"
        android:textSize="12sp"       
      />    
    
    <TextView
        android:id="@+id/TextView_15_label"
        android:layout_below="@+id/seekBarTipPercentage"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="15%"
        android:textSize="12sp"       
    />                  
       
    <TextView
        android:id="@+id/TextView_30_label"
        android:layout_below="@+id/seekBarTipPercentage"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_alignParentRight="true"
        android:text="30%"
        android:textSize="12sp"       
    />         
     <!-- To center this string on display, I need to center the word Amount ! --> 
     <TextView
        android:id="@+id/textViewTipAmountLabel"
        android:layout_below="@+id/TextView_0_label" 
        android:layout_centerHorizontal="true"         
        android:layout_marginTop="10dp"     
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:textSize="16sp"
        android:textStyle="normal"
        android:text="@string/amountOfTipAmountLabel"  />
     
       <TextView
        android:id="@+id/textViewTipOfTipAmountLabel"
        android:layout_below="@+id/TextView_0_label" 
        android:layout_toLeftOf="@+id/textViewTipAmountLabel"        
        android:layout_marginTop="10dp"     
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:textSize="16sp"
        android:textStyle="normal"
        android:text="@string/tipOfTipAmountLabel"  />   
                
     <TextView
        android:id="@+id/textViewTipAmount"   
        android:layout_toRightOf="@+id/textViewTipAmountLabel"  
        android:layout_below="@+id/TextView_0_label"   
        android:layout_marginTop="10dp"          
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="normal"   />        
    
   <!--Ref. invisible-vertical-center-Line for TipSplit Line below-->
   <View    
      android:id="@+id/viewMidLine_NOT_USED_for_future_Ref"
      android:layout_width="fill_parent"
      android:layout_height="0dp"
      android:layout_centerVertical="true"
      android:layout_marginTop="1dp"
      android:background="#000000"     
   /> 
   
   <!-- Line -->
   <View    
      android:id="@+id/viewTipSplitLine"
      android:layout_below="@+id/textViewTipAmountLabel"
      android:layout_marginTop="20dp"
      android:layout_width="fill_parent"
      android:layout_height="1dp"
      android:background="#5ABAFA"     
   />
   
   <!-- Give "weight" of 1 to each Tip Split and Tax Split -->
 
   <LinearLayout 
    android:id="@+id/tipAndTaxSplitLabels"   
    android:orientation="horizontal"
    android:layout_below="@+id/viewTipSplitLine"
    android:layout_marginTop="22dp"
    android:layout_marginLeft="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">  
   
   <TextView
       android:id="@+id/textViewTipSplitLabel"
       android:layout_weight="1"
       android:layout_width="0dp"
       android:layout_height="wrap_content"       
       android:textSize="18sp"       
       android:textStyle="bold" 
       android:text="@string/tipSplitLabel" />
   
   <TextView
       android:id="@+id/textViewTaxSplitLabel"
       android:layout_weight="1"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:textSize="18sp"       
       android:textStyle="bold" 
       android:text="@string/taxSplitLabel" />    
   </LinearLayout>    
    
  <LinearLayout 
    android:id="@+id/radioGroupsForTipAndTaxSplits"   
    android:orientation="horizontal"
    android:layout_below="@+id/tipAndTaxSplitLabels"
    android:layout_marginTop="14dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">     
   
   <RadioGroup 
       android:id="@+id/radioGroupTipSplit"
       android:orientation="vertical"
       android:layout_weight="1"
       android:layout_width="0dp"
       android:layout_height="wrap_content" >

        <RadioButton 
           android:id="@+id/radioButtonTipPropSplit"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/proportionalSplitLabel"
           android:textSize="12sp"
           android:checked="true"  />  
        <RadioButton 
           android:id="@+id/radioButtonTipEqualSplit"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/equalSplitLabel"
           android:textSize="12sp"        />    
    </RadioGroup>
   
    <RadioGroup 
       android:id="@+id/radioGroupTaxSplit"
       android:orientation="vertical"
       android:layout_weight="1"
       android:layout_width="0dp"
       android:layout_height="wrap_content" >

        <RadioButton 
           android:id="@+id/radioButtonTaxPropSplit"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/proportionalSplitLabel"
           android:textSize="12sp"
           android:checked="true"  />  
        <RadioButton 
           android:id="@+id/radioButtonTaxEqualSplit"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/equalSplitLabel"
           android:textSize="12sp"        />    
    </RadioGroup>
   </LinearLayout>   
        
    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroupsForTipAndTaxSplits"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"        
        android:onClick="onClickTipActivityNextBtn"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:text="@string/nextLabel"
        android:textStyle="normal"
        android:background="#AAEAED"
        android:textColor="#0000ff"
        android:textSize="18sp" />

</RelativeLayout>
