<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow_light"
    tools:context="com.moquapps.android.instacheck.FinalTab" >
    
    <TextView
       android:id="@+id/textViewTitleLabel"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
       android:textSize="30sp"
       android:textColor="@color/blue"
       android:textStyle="bold"
       android:text="@string/FinalTabTitle" />

    <!-- Line -->
    <View
       android:id="@+id/viewLineAfterTitleLabel"
       android:layout_below="@+id/textViewTitleLabel"
       android:layout_marginTop="1dp"
       android:layout_width="fill_parent"
       android:layout_height="2dp"
       android:background="@color/finalTabLineColor"   />
    
   <!-- virtual center for reference only -->
   <TextView
        android:id="@+id/textViewVirtualCenter"
        android:layout_below="@+id/viewLineAfterTitleLabel"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="1dp"  />

     <TextView
        android:id="@+id/textViewFinalTabSubTitlePeople"
        android:layout_below="@+id/viewLineAfterTitleLabel"
        android:layout_alignRight="@+id/textViewVirtualCenter"
        android:layout_marginRight="22dp"
        android:layout_marginTop="1dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:text="@string/PeopleSubTitle" />
   
     <TextView
        android:id="@+id/textViewFinalTabSubTitleAmount"
        android:layout_below="@+id/viewLineAfterTitleLabel"
        android:layout_toEndOf="@+id/textViewFinalTabSubTitlePeople"
        android:layout_marginStart="18dp"
        android:layout_marginTop="1dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:text="@string/AmountSubTitle" />
    
   <!-- Line -->
   <View    
      android:id="@+id/viewLineAfterFinalTabSubTitle"
      android:layout_below="@+id/textViewFinalTabSubTitlePeople"
      android:layout_marginTop="2dp"
      android:layout_width="fill_parent"
      android:layout_height="2dp"
      android:background="@color/finalTabLineColor"   />
   
   <ListView
        android:id="@+id/listViewForFinalTabItems"
        android:layout_below="@+id/viewLineAfterFinalTabSubTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/finaltab_listview_divider"
        android:dividerHeight="4dp" />
        <!-- Above, dividerHeight is MUST to display "divider" in ListView.
             Line thickness of divider is NOT taken from above.
             Line Thickness is taken from drawable/finaltab_listview_divider.xml file
        -->
    <!-- Line -->
    <View
       android:id="@+id/viewLineAfterValues"
       android:layout_below="@+id/listViewForFinalTabItems"
       android:layout_marginTop="5dp"
       android:layout_width="fill_parent"
       android:layout_height="2dp"
       android:background="@color/finalTabLineColor"   />

</RelativeLayout>